Revert "Replaced deprecated new Integer(), Double(), Float() by .valueOf()"
This reverts commit de343a75a880509ab1274a1446ad341e8e8211aa.

Signed-off-by: Martin Bluemel <martin.bluemel1@vodafone.com>